--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/range-slider/range-slider.scss';
 @import './blocks/pagination/pagination.scss';
 @import './blocks/date-dropdown/date-dropdown.scss';
+@import './blocks/subscribe/subscribe.scss';
 
 
 // UI Kit
