--- a/src/blocks/expand-triger/expand-triger.pug
+++ b/src/blocks/expand-triger/expand-triger.pug
@@ -1,16 +1,11 @@
-include ../input/input.pug
-
 mixin expand-triger(labelClass, id, labelText)
-  +input(
-    {
-      type: "checkbox",
-      id: "triger" +id,
-      txtlabel: labelText,
-      classinput: "expand-triger",
-      classlabel: `expand-triger__label expand-triger__label_${labelClass}`,
-    }
-  )
+  input(type="checkbox"
+    class="expand-triger"
+    id="triger" +id
+    )
+  label(for= "triger" +id
+    class=`expand-triger__label expand-triger__label_${labelClass}`
+    )= labelText
 
 
-
-//- +expand-triger('check||burger||pointer', '1', 'Сколько гостей')
+//- +expand-triger('check||burger||pointer', 'unique id', 'triger txt')
