--- a/src/blocks/dropdown-input/dropdown-input.pug
+++ b/src/blocks/dropdown-input/dropdown-input.pug
@@ -20,6 +20,6 @@ mixin dropdown-input(label, listitem, button, trigerclass, trigerid, labelText)
 //-   },
 //-   ['очистить', 'применить'],
 //-   'check||burger||pointer',
-//-   'uniq id'
+//-   'uniq id',
 //-   'field default text'
 //- )
