--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/pagination/pagination.scss';
 @import './blocks/date-dropdown/date-dropdown.scss';
 @import './blocks/subscribe/subscribe.scss';
+@import './blocks/dropdown-checkbox/dropdown-checkbox.scss';
 
 
 // UI Kit
