--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -316,6 +316,7 @@ html(lang="ru")
             '11',
             'Сколько гостей'
           )
+        div(style="height:200px;")
       section.ui-kit__section-vertical
         +dropdown-input(
             "dropdown",
@@ -329,4 +330,5 @@ html(lang="ru")
             '12',
             'Сколько гостей'
           )
+        div(style="height:200px;")
       section.section-horizont
