--- a/src/style.scss
+++ b/src/style.scss
@@ -36,6 +36,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/date-dropdown/date-dropdown.scss';
 @import './blocks/subscribe/subscribe.scss';
 @import './blocks/dropdown-checkbox/dropdown-checkbox.scss';
+@import './blocks/rich-checkbox/rich-checkbox.scss';
 
 
 // UI Kit
