--- a/src/style.scss
+++ b/src/style.scss
@@ -38,7 +38,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/subscribe/subscribe.scss';
 @import './blocks/dropdown-checkbox/dropdown-checkbox.scss';
 @import './blocks/rich-checkbox/rich-checkbox.scss';
-
+@import './blocks/room-info/room-info.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
