--- a/src/blocks/ui-kit/ui-kit.scss
+++ b/src/blocks/ui-kit/ui-kit.scss
@@ -6,6 +6,7 @@
 @import './__rate-line/ui-kit__rate-line.scss';
 @import './__type/ui-kit__type.scss';
 @import './__color/ui-kit__color.scss';
+@import './__section-horizont';
 
 .ui-kit {
   display: flex;
