--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/dropdown-checkbox/dropdown-checkbox.scss';
 @import './blocks/rich-checkbox/rich-checkbox.scss';
 @import './blocks/room-info/room-info.scss';
+@import './blocks/comment/comment.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
