--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -1,8 +1,15 @@
 .form {
+  padding: 40px 30px 30px;
   max-width: 380px;
   box-sizing: border-box;
   background: white;
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  box-shadow: 0 0 0 25px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+
+  &__inner {
+    border: none;
+    padding: 0;
+    margin: 20px 0;
+  }
 }
