--- a/src/blocks/form-join/form-join.pug
+++ b/src/blocks/form-join/form-join.pug
@@ -36,7 +36,7 @@ form.form(action="#" name="join" id="join" method="get")
     span.label-cta дата рождения
     input(class="input" type="text" name="birthday" placeholder="ДД.ММ.ГГГГ")
   fieldset.form__inner
-    span.label-cta данные для входа на сервер
+    span.label-cta данные для входа в сервис
     input(class="input" type="text" name="email" placeholder="Email")
     input(class="input" type="password" name="password" placeholder="Пароль")
     +toggle(
