--- a/src/blocks/dropdown-input/__item-list/dropdown-input__item-list.scss
+++ b/src/blocks/dropdown-input/__item-list/dropdown-input__item-list.scss
@@ -1,17 +1,19 @@
 .dropdown-input__item-list {
-  @extend .input;
-  padding-right: 7px;
+  width: calc(100% + 2px);
   height: auto;
+  margin: 0;
+  padding: 0 7px 0 15px;
+  box-sizing: border-box;
   position: absolute;
   left: -1px;
-  top: 100%;
+  top: calc(100% - 3px);
   border-radius: 0 0 4px 4px;
-  border-color: $dark_shade_50;
+  border: 1px solid $dark_shade_50;
   display: none;
   background: white;
 }
 
 .expand-triger:checked ~ .dropdown-input__item-list {
   display: block;
-  z-index: 10;
+  z-index: 15;
 }
