--- a/src/blocks/dropdown-input/__item/dropdown-input__item.pug
+++ b/src/blocks/dropdown-input/__item/dropdown-input__item.pug
@@ -1,19 +1,10 @@
-include ../../input/input.pug
 mixin dropdown-input__item(item)
   each label, name in item
     div.dropdown-input__item
       div= label
       div.dropdown-input__item-inner
         div.dropdown-input__item-count_minus
-        +input(
-          {
-            type: "text",
-            name:name,
-            form:"",
-            classinput: "dropdown-input__item-count",
-            placeholder: "0",
-          }
-        )
+        input(type="text", name=name, class="dropdown-input__item-count" value="0")
         div.dropdown-input__item-count_plus
 
 
