добавлен блок form-login

--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -10,3 +10,7 @@ html(lang="ru")
         include ../blocks/form-search-room/form-search-room.pug
         div(style="height:40px")
         include ../blocks/form-join/form-join.pug
+      section(style="max-width:380px")
+        
+        div(style="height:40px")
+        include ../blocks/form-login/form-login.pug
