block  form-book-room

--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -11,6 +11,6 @@ html(lang="ru")
         div(style="height:40px")
         include ../blocks/form-join/form-join.pug
       section(style="max-width:380px")
-        
+        include ../blocks/form-book-room/form-book-room.pug
         div(style="height:40px")
         include ../blocks/form-login/form-login.pug
