--- a/src/blocks/form-join/form-join.pug
+++ b/src/blocks/form-join/form-join.pug
@@ -2,7 +2,7 @@ include ../radiobutton/radiobutton.pug
 include ../toggle/toggle.pug
 
 form.form(action="#" name="join" id="join" method="get")
-  p.title Регистрация аккаунта
+  h2.title Регистрация аккаунта
   fieldset.form__inner
     input(type="text" name="name" placeholder="Имя" class="input")
     input(type="text" name="surname" placeholder="Фамилия" class="input")
@@ -37,7 +37,7 @@ form.form(action="#" name="join" id="join" method="get")
     input(class="input" type="text" name="birthday" placeholder="ДД.ММ.ГГГГ")
   fieldset.form__inner
     span.label-cta данные для входа в сервис
-    input(class="input" type="text" name="email" placeholder="Email")
+    input(class="input" type="email" name="email" placeholder="Email")
     input(class="input" type="password" name="password" placeholder="Пароль")
     +toggle(
       {
