--- a/src/style.scss
+++ b/src/style.scss
@@ -40,6 +40,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/rich-checkbox/rich-checkbox.scss';
 @import './blocks/room-info/room-info.scss';
 @import './blocks/comment/comment.scss';
+@import './blocks/form-book-room/form-book-room.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
