add inline air-datepicker

--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -14,3 +14,7 @@ html(lang="ru")
         include ../blocks/form-book-room/form-book-room.pug
         div(style="height:40px")
         include ../blocks/form-login/form-login.pug
+      section(style="max-width:380px")
+        .date-dropdown_single-range
+        div(style="height:40px")
+        div(style="height:40px")
