--- a/src/pages/cards.pug
+++ b/src/pages/cards.pug
@@ -5,6 +5,7 @@ html(lang="ru")
     title Cards
   body.page
     include ../blocks/ui-kit/__header/ui-kit__header.pug
+    include ../blocks/room-card/room-card.pug
     main.ui-kit
       section(style="max-width:380px")
         include ../blocks/form-search-room/form-search-room.pug
@@ -17,4 +18,21 @@ html(lang="ru")
       section(style="max-width:380px")
         .date-dropdown_single-range
         div(style="height:40px")
+        + room-card(
+          {"комната1":"room888/thumbnail888.jpg",
+          "комната2":"room888/thumbnail888.jpg",
+          "комната3":"room888/thumbnail888.jpg",
+          "комната4":"room888/thumbnail888.jpg",},
+          ['888', 'люкс', '9990'],
+          ['5', '145 отзывов'])
         div(style="height:40px")
+        + room-card(
+          {"комната1":"room840/thumbnail840.jpg",
+          "комната2":"room840/thumbnail840.jpg",
+          "комната3":"room840/thumbnail840.jpg",
+          "комната4":"room840/thumbnail840.jpg",},
+          ['840', '', '9990'],
+          ['4', '65 отзывов'])
+        
+        //- /var/www/html/fsd_practice/src/img/room888/thumbnail.jpg
+        //- src/blocks/room-card/img/room888/thumbnail.jpg
