--- a/src/blocks/ui-kit/__type/ui-kit__type.scss
+++ b/src/blocks/ui-kit/__type/ui-kit__type.scss
@@ -10,6 +10,6 @@
     margin: 0 30px 0 0;
     text-align: right;
     min-width: 40px;
-    color: $dark-shade-25;
+    color: $dark_shade_25;
   };
 }
