add page Headers & Footers

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,9 @@ $font-family-title: 'Quicksand';
 @import './blocks/label-cta/label-cta.scss';
 @import './blocks/button/button.scss';
 @import './blocks/bullet-list/bullet-list.scss';
+@import './blocks/header/header.scss';
+@import './blocks/footer/footer.scss';
+@import './blocks/menu/menu.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
