--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -2,6 +2,6 @@
   margin: 0;
   padding: 0;
   font: normal 14px/24px $font-family-text, sans-Serif;
-  background: white;
+  background: #e5e5e5;
   color: $text-color;
 }
