--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/header/header.scss';
 @import './blocks/footer/footer.scss';
 @import './blocks/menu/menu.scss';
+@import './blocks/nav/nav.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
@@ -45,6 +46,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/comment/comment.scss';
 @import './blocks/form-book-room/form-book-room.scss';
 @import './blocks/room-card/room-card.scss';
+@import './blocks/user-login/user-login.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
