--- a/src/blocks/range-slider/range-slider.scss
+++ b/src/blocks/range-slider/range-slider.scss
@@ -8,6 +8,7 @@
 .range-slider__num{
   display: flex;
   line-height: 15px;
+  font-size: 12px;
   &-input {
     border:none;
     text-align: right;
