--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -11,28 +11,38 @@
       opacity: 0.5;
     }
   }
+
   &_border {
+    display: inline-block;
     position: relative;
     margin: 2px;
-    padding: 13px 18px;
-    background: white;
+    padding: 0;
     color: $main-color;
     border:none;
+
     &:before {
       content: '';
-      position: absolute;
       width: calc(100% + 4px);
       height: calc(100% + 4px);
+      position: absolute;
       top: -2px;
-      right: -2px;
+      left: -2px;
       background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
       border-radius: 50px;
-      z-index: -1;
     }
     &:hover:before {
       opacity: 0.5;
     }
   }
+  
+  &__txt {
+    display: block;
+    padding: 13px 18px;
+    position: relative;
+    background: white;
+    border-radius: 50px;
+  }
+
   &_lite {
     background: transparent;
     border: none;
