--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -3,11 +3,15 @@
   &__inner {
     display: flex;
     margin: 10px 0;
-  
-    & > div:first-child {
-      width: 50px;
-      margin-right: 10px;
-    }
+  }
+
+  &__author-foto {
+    margin-right: 10px;
+    line-height: 0;
+  }
+
+  &__like {
+    margin: 0 15px 0 5px;
   }
 
   &__txt {
