--- a/src/style.scss
+++ b/src/style.scss
@@ -51,3 +51,10 @@ $font-family-title: 'Quicksand';
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
 @import './blocks/ui-kit/ui-kit.scss';
+
+button {
+  padding: 0;
+  margin: 0;
+  border: none;
+  background: none;
+}
