pixel perfect 4 footer & headers

--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -3,6 +3,7 @@
   padding: 15px 20px;
   box-sizing: border-box;
   border-radius: 50px;
+  text-decoration: none;
   &_fill {
     border: none;
     background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
