--- a/src/blocks/user-login/user-login.pug
+++ b/src/blocks/user-login/user-login.pug
@@ -1,9 +1,11 @@
+include ../button/button_border.pug
 mixin user-login(userName, login, register)
   if(userName)
     .user-logged= userName
   else
     .header__login-button
-      button.button.button_border= login
-      button.button.button_fill= register
+      a(href='#')
+        +button_border('login')
+      a(href='#').button.button_fill= register
 
 //- +user-login('Cosmin Negoita', 'login', 'register')
