--- a/src/pages/headers-footers.pug
+++ b/src/pages/headers-footers.pug
@@ -14,7 +14,7 @@ html(lang="ru")
           a(href="/")
             include ../blocks/logo/logo.pug
         nav
-          +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#', 'Serv':{'serv':'#', 'serv1':'#', 'serv3':{'assa':'#', 'assa2':'#'}}, ser:'#'}, 'Careers':'#', 'Documentation':'#'})
+          +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#', 'Serv':{'serv':'#', 'serv1':'#', 'serv3':{'assa':'#', 'assa2':'#'}}, ser:'#'}, 'Careers':'#', 'News':'#', 'Documentation':'#'})
         +user-login('', 'login', 'register')
       div(style="height:40px")
       header.header
@@ -22,7 +22,7 @@ html(lang="ru")
           a(href="/")
             include ../blocks/logo/logo.pug
         nav
-          +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#'}, 'Careers':'#', 'Documentation':'#'})
+          +nav({'Home':'#', 'About Us':'#', 'Services':{'Services1':'#', 'Services2':'#'}, 'Careers':'#', 'News':'#', 'Documentation':'#'})
         +user-login('Cosmin Negoita')
       div(style="height:40px")
       include ../blocks/footer/footer.pug
