--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -5,10 +5,11 @@ footer.footer
   .footer__content
     .logo
       include ../logo/logo.pug
-      p Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
-  +menu("navigation", {"About Us":"#", "News":"#", "Support":"#", "Products":"#"})
-  +menu("about us", {"Who we are":"#", "Our team":"#", "Careers":"#", "Investors":"#"})
-  +menu("support", {"Documentation":"#", "Community":"#", "Get in Touch":"#"})
+    p Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+  .footer__menu
+    +menu("navigation", {"About Us":"#", "News":"#", "Support":"#", "Products":"#"})
+    +menu("about us", {"Who we are":"#", "Our team":"#", "Careers":"#", "Investors":"#"})
+    +menu("support", {"Documentation":"#", "Community":"#", "Get in Touch":"#"})
   .footer__content
     h3.label-cta Subscribe to our newsletter
     p Receive our latest news and 
