--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -7,12 +7,18 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 }
 
+.footer__menu {
+  display: flex;
+  flex-grow: 1;
+  margin-left: 40px;
+}
+
 .footer__content {
   max-width: 260px;
 }
 
 .footer__content p {
-  margin: 20px 0;
+  margin: 20px 0 25px;
 }
 
 .footer__copyright {
