--- a/src/blocks/menu/menu.scss
+++ b/src/blocks/menu/menu.scss
@@ -1,3 +1,7 @@
+.menu {
+  flex-grow: 1;
+}
+
 .menu__list {
   margin: 0;
   padding: 0;
@@ -6,6 +10,10 @@
 .menu__item {
   list-style: none;
   margin: 1.1em 0;
+}
+
+.menu__item:last-child {
+  margin-bottom: 0;
 }
 
 .menu__link {
