--- a/src/blocks/user-login/user-login.scss
+++ b/src/blocks/user-login/user-login.scss
@@ -2,8 +2,8 @@
   margin-right: 20px;
 }
 
-.header__login-button .button {
-  padding: 10px 20px;
+.header__login-button .button_fill, .button__txt {
+  padding: 9px 20px;
 }
 
 .user-logged {
