--- a/src/blocks/form-search-room/form-search-room.pug
+++ b/src/blocks/form-search-room/form-search-room.pug
@@ -20,7 +20,7 @@ form.form(action="#" name="search-room" id="search-room")
         }
       }
     )
-  fieldset.form__inner
+  fieldset.form__inner.form__inner_search-room
     +dropdown-input(
       "гости",
       {
