--- a/src/blocks/room-card/room-card.pug
+++ b/src/blocks/room-card/room-card.pug
@@ -10,7 +10,7 @@ mixin room-card(img, roominfo, rate)
     .room-card__inner
       .room-card__head
         span.room-card__number №
-          span.title #{roominfo[0]}
+          span.sub-title #{roominfo[0]}
         span.room-card__class-room= roominfo[1]
         span.room-card__price
           b #{roominfo[2]}₽ 
