--- a/src/blocks/form-login/form-login.pug
+++ b/src/blocks/form-login/form-login.pug
@@ -1,7 +1,7 @@
 include ../button/button_border.pug
 form.form(action="#" name="login" id="login" method="get")
   h2.title Войти
-  fieldset.form__inner
+  fieldset.form__inner.form__inner_log
     input(type="email" name="email" placeholder="Email" class="input")
     input(class="input" type="password" name="password" placeholder="Пароль")
   <button class="button button_fill button_pointer" type="submit">войти</button>
