--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -11,10 +11,18 @@
     border: none;
     padding: 0;
     margin: 15px 0;
+
+    &_search-room {
+      margin-bottom: 30px;
+    }
+    &_log .input {
+      margin: 5px 0;
+    }
   }
 
   &__footer {
     display: flex;
     justify-content: space-between;
+    margin: 30px 0 0;
   }
 }
