--- a/src/blocks/room-card/room-card.scss
+++ b/src/blocks/room-card/room-card.scss
@@ -19,7 +19,7 @@
 }
 
 .room-card__inner {
-  padding: 20px;
+  padding: 15px 20px;
 }
 
 .room-card__class-room {
@@ -38,7 +38,7 @@
 }
 
 .room-card__line {
-  margin: 10px 0;
+  margin: 7px 0;
   width: 100%;
   border-top: 1px solid $dark_shade_05;
 }
