--- a/src/blocks/user-login/user-login.scss
+++ b/src/blocks/user-login/user-login.scss
@@ -2,7 +2,7 @@
   margin-right: 20px;
 }
 
-.header__login-button .button_fill, .button__txt {
+.header__login-button .button_fill, .header__login-button .button__txt {
   padding: 9px 20px;
 }
 
