add landing page

--- a/src/style.scss
+++ b/src/style.scss
@@ -48,6 +48,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/room-card/room-card.scss';
 @import './blocks/user-login/user-login.scss';
 @import './blocks/logo/logo.scss';
+@import './blocks/landing/landing.scss';
 
 // UI Kit
 // @import './blocks/ui.page/header-ui/header-ui.scss';
