Add registration page

--- a/src/layout/page-layout.pug
+++ b/src/layout/page-layout.pug
@@ -25,7 +25,7 @@ html
         .footer__content
           .logo
             include ../blocks/logo/logo.pug
-          p Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+          p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
         .footer__menu
           +menu("navigation", {"About Us":"#", "News":"#", "Support":"#", "Products":"#"})
           +menu("about us", {"Who we are":"#", "Our team":"#", "Careers":"#", "Investors":"#"})
