--- a/src/blocks/page-join/page-join.scss
+++ b/src/blocks/page-join/page-join.scss
@@ -2,6 +2,7 @@
   padding: 2em 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   min-height: 700px;
   box-sizing: border-box;
   background: bottom url(img/background/signin-bg.jpg);
