--- a/src/blocks/landing/landing.scss
+++ b/src/blocks/landing/landing.scss
@@ -4,8 +4,8 @@
   align-items: flex-start;
   padding: 5em 9em 2em;
   box-sizing: border-box;
-  height: 900px;
-  background: url(img/background/landing-bg.jpg);
+  height: 830px;
+  background: bottom url(img/background/landing-bg.jpg);
   &__text {
     align-self: flex-end;
     text-align: right;
