add search result page

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/footer/footer.scss';
 @import './blocks/menu/menu.scss';
 @import './blocks/nav/nav.scss';
+@import './blocks/note/note.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
