--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -23,7 +23,7 @@
 
 .footer__copyright {
   padding: 20px 140px;
-  margin-top: 1px;
+  border-top: 1px solid $dark_shade_25;
 }
 
 .footer__social-link {
